# PythonPiscine

./: .gitignore  LICENSE  README.md
Module_00/ex00/: answers.txt_crfernan  requirements.txt  requirements.txt_epham
Module_00/ex01/: exec.py
Module_00/ex02/: whois.py
Module_00/ex03/: count.py
Module_00/ex04/: operations.py
Module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Module_00/ex06/: recipe.py
Module_00/ex07/: filterwords.py
Module_00/ex08/: sos.py
Module_00/ex09/: guess.py
Module_00/ex10/: loading.py
Module_01/ex00/: book.py  recipe.py  test.py
Module_01/ex01/: game.py
Module_01/ex02/: test.py  vector.py
Module_01/ex03/: generator.py  test.py
Module_01/ex04/: eval.py  test.py
Module_01/ex05/: test.py  the_bank.py
Module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
Module_02/ex01/: main.py
Module_02/ex02/: logger.py
Module_02/ex03/: bad.py  csvreader.py  good.py  test.py
Module_02/ex04/: README.md  build.sh  setup.cfg  setup.py  test.py
Module_02/ex04/src/my_minipack/: logger.py  progressbar.py
Module_03/ex00/: NumPyCreator.py  test.py
Module_03/ex01/: ImageProcessor.py  test.py
Module_03/ex02/: ScrapBooker.py  test.py
Module_03/ex03/: ColorFilter.py  test.py
Module_03/ex04/: Kmeans.py  main.py
Module_04/ex00/: FileLoader.py  test.py
Module_04/ex01/: YoungestFellah.py  test.py
Module_04/ex02/: ProportionBySport.py  test.py
Module_04/ex03/: HowManyMedals.py  test.py
Module_04/ex04/: FileLoader.py  SpatioTemporalData.py  test.py
ex00/: answers.txt
(+6 files in other folders)
