[metadata]
name = my_minipack
version = 1.0.0
author = Cristina Fernandez Bornay
author_email = cristinafernandezbornay@outlook.com
description = 42 Piscine Python exercise
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE
url = https://github.com/CristinaFdezBornay/PythonPiscine
project_urls =
    Bug Tracker = https://github.com/CristinaFdezBornay/PythonPiscine/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Education

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src